# github-code-review-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  architecture_github_code_review_agent.md  check_review.py  docker-compose.yml  frontend_github_code_review_agent.md  prd_github_code_review_agent.md  pyproject.toml  render.yaml  security_github_code_review_agent.md  test_e2e_full.py  tickets_github_code_review_agent.md
app/: celery_app.py  main.py
app/agent/: graph.py  llm.py  state.py
app/agent/nodes/: analyze_llm.py  analyze_rag.py  fetch_diff.py  format_comments.py  generate_summary.py  parse_files.py  post_comments.py
app/api/: feedback.py  health.py  repos.py  webhook.py
app/core/: config.py  exceptions.py  logging.py
app/db/: session.py
app/db/crud/: __init__.py  comment.py  feedback.py  pull_request.py  repository.py  review.py
app/db/models/: __init__.py  comment.py  enums.py  feedback.py  pull_request.py  repository.py  review.py
app/github/: __init__.py  client.py  webhook.py
app/mcp/: server.py
app/mcp/tools/: __init__.py  get_pr_diff.py  get_pr_files.py  post_comment.py  post_summary.py  store_feedback.py
app/rag/: chroma.py  repository.py  retrieve.py  store.py
app/tasks/: review.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_update_feedback_model.py
tests/: conftest.py  e2e_dryrun.py
tests/integration/: test_api.py
tests/unit/: test_agent.py  test_core.py  test_db.py  test_mcp.py  test_rag.py  test_tasks.py  test_webhook.py
