[project]
name = "github-code-review-agent"
version = "1.0.0"
description = "Autonomous AI-powered code review agent for GitHub pull requests"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pygithub>=2.4.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
